--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </p>
     <ol>
         <li>Structure. A normative specification of the nature of an OCFL Object (the "object-at-rest");</li>
-        <li>Client Behaviours. A set of recommendations for how OCFL Objects should be acted upon (the
+        <li>Client Behaviors. A set of recommendations for how OCFL Objects should be acted upon (the
             "object-in-motion")
         </li>
     </ol>
@@ -137,7 +137,7 @@
            ephemeral software.</p>
         <p>By providing a specification for the file-and-folder layout on disk, the OCFL is an attempt at reducing, or
            even eliminating, the need for these transitions. As an application-independent specification, conforming
-           applications will natively 'understand' the underlying file structure without needing to first transition
+           applications will natively "understand" the underlying file structure without needing to first transition
            these contents to their own format.</p>
     </section>
 </section>
@@ -269,7 +269,7 @@
         </p>
         <p>
             However, it is acknowledged that this may be a significant barrier for legacy content migration and
-            consistency. Implementors may thus choose from the following list of digest algorithms:
+            consistency. Implementers may thus choose from the following list of digest algorithms:
         </p>
         <table>
             <thead>
