--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
     <p>
         An OCFL Object Inventory MUST follow the [[!JSON]] structure described in this section and MUST be named
         <code>inventory.jsonld</code>. Furthermore, inventory files MUST conform to [[!JSON-LD-1.1]], MUST include
-        the JSON-LD <code>@context</code> value <a href="context.jsonld"><code>https://ocfl.io/context.jsonld</code></a>.
+        the JSON-LD <code>@context</code> value
+        <a href="context.jsonld"><code>https://ocfl.io/context.jsonld</code></a>.
     </p>
     <blockquote class="informative">
         Non-normative note: The use of JSON-LD for inventory files means that they can be generated from and interpreted
