Fixed: Make travis happy

--- a/client-behaviors.html
+++ b/client-behaviors.html
@@ -119,7 +119,8 @@
 <section id="abstract" class="informative">
     <h2>Introduction</h2>
     <p>
-        This document provides guidance to OCFL implementers for how clients should behave when operating on OCFL Objects.
+        This document provides guidance to OCFL implementers for how clients should behave when operating on
+        OCFL Objects.
     </p>
 </section>
 </body>
