Fixed: Add paragraph on supporting empty directories
Fixes #51

--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@
 
         <section id="versions">
             <h2>Versions</h2>
+            <p>
+                Empty directories within a version directory are not permitted. Otherwise empty directories MAY be
+                maintained by creating a <code>.keep</code> file within that directory.
+            </p>
         </section>
     </section>
 
