--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </p>
     <ol>
         <li>A conceptual gathering of all files (data and metadata), folders, and their changes over time which together
-            form the digital representation of a complete intellectual endeavour (i.e., content); and</li>
+            form the digital representation of an entity that need to be managed as a single coherent whole (i.e., content); and</li>
         <li>A file and folder layout and administrative information on a storage medium that provides a defined
             structure for the storage of this content, and through which these files and their changes may be understood
             (i.e., structure).</li>
