--- a/index.html
+++ b/index.html
@@ -182,11 +182,18 @@
     </p>
     <ol>
         <li>A conceptual gathering of all files (data and metadata), folders, and their changes over time which together
-            form the digital representation of an entity that need to be managed as a single coherent whole (i.e., content); and</li>
+            form the digital representation of an entity that need to be managed, in preservation terms, as a single coherent 
+            whole (i.e., content); and</li>
         <li>A file and folder layout and administrative information on a storage medium that provides a defined
             structure for the storage of this content, and through which these files and their changes may be understood
             (i.e., structure).</li>
-    </ol>
+    </ol> 
+   <p>
+        A key goal of OCFL is the rebuildability of a repository from an OCFL storage root without additional information
+        resources. Consequently, a key implementation consideration should be to ensure that OCFL objects contain all 
+        the data and metadata required to achieve this. With reference to th OAIS model, this would include all the 
+        descriptive, administrative, structural, representation and preservation metadata relevant to the object.
+    <p>
 
     <section id="basic-structure">
         <h2>Basic Structure</h2>
