Clarify extra copy of digests in external system

--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
                 </tbody>
             </table>
             <p>
-                Implementers MAY wish to store their file digests in a system external to their OCFL object stores at
-                the point of ingest, to further safeguard against the possibility of malicious manipulation of file
-                contents and digests.
+                Implementers MAY also store copies of their file digests in a system external to their OCFL object
+                stores at the point of ingest, to further safeguard against the possibility of malicious manipulation
+                of file contents and digests.
             </p>
         </section>
 
