--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
             </table>
             <blockquote class="informative">
               <p>
-                Non-normative: Implementers MAY also store copies of their file digests in a system external to their
-                OCFL object stores at the point of ingest, to further safeguard against the possibility of malicious
-                manipulation of file contents and digests.
+                Non-normative note: Implementers MAY also store copies of their file digests in a system external to
+                their OCFL object stores at the point of ingest, to further safeguard against the possibility of
+                malicious manipulation of file contents and digests.
               </p>
             </blockquote>
         </section>
