Adds closing section tag

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         <dt>Logs Directory</dt>
         <dd></dd>
     </dl>
+</section>
 
 <section id="object-spec">
     <h2>OCFL Object</h2>
