Adds more terms to be defined

--- a/index.html
+++ b/index.html
@@ -167,25 +167,41 @@
 <section id="terminology">
     <h2>Terminology</h2>
     <dl>
-        <dt><dfn>OCFL Object</dfn>:</dt>
+        <dt><dfn>Additions</dfn>:</dt>
+        <dd></dd>
+        <dt><dfn>Deleting</dfn>:</dt>
+        <dd></dd>
+        <dt><dfn>Digest</dfn>:</dt>
+        <dd></dd>
+        <dt><dfn>Directories</dfn>:</dt>
+        <dd></dd>
+        <dt><dfn>Existing File Path</dfn>:</dt>
+        <dd></dd>
+        <dt><dfn>Existing State</dfn>:</dt>
         <dd></dd>
         <dt><dfn>File</dfn>:</dt>
         <dd></dd>
-        <dt>Directories</dt>
+        <dt><dfn>Inventory Digest</dfn>:</dt>
         <dd></dd>
-        <dt>OCFL Object Root<dt>
+        <dt><dfn>Inventory File</dfn>:</dt>
         <dd></dd>
-        <dt>OCFL Storage Root</dt>
+        <dt><dfn>Logical File Path</dfn>:</dt>
         <dd></dd>
-        <dt>Inventory File</dt>
+        <dt><dfn>Logical State</dfn>:</dt>
         <dd></dd>
-        <dt>Inventory Digest</dt>
+        <dt><dfn>Logs Directory</dfn>:</dt>
         <dd></dd>
-        <dt>Version<dt>
+        <dt><dfn>OCFL Object</dfn>:</dt>
         <dd></dd>
-        <dt>Digest</dt>
+        <dt><dfn>OCFL Object Root</dfn>:<dt>
         <dd></dd>
-        <dt>Logs Directory</dt>
+        <dt><dfn>OCFL Storage Root</dfn>:</dt>
+        <dd></dd>
+        <dt><dfn>Purging</dfn>:</dt>
+        <dd></dd>
+        <dt><dfn>Renaming</dfn>:</dt>
+        <dd></dd>
+        <dt><dfn>Version</dfn>:<dt>
         <dd></dd>
     </dl>
 </section>
