--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
             </table>
             <blockquote class="informative">
               <p>
-                Non-normative note: Implementers MAY also store copies of their file digests in a system external to their OCFL Object
-                stores at the point of ingest, to further safeguard against the possibility of malicious manipulation
-                of file contents and digests.
+                Non-normative note: Implementers MAY also store copies of their file digests in a system external to
+                their OCFL Object stores at the point of ingest, to further safeguard against the possibility of
+                malicious manipulation of file contents and digests.
               </p>
             </blockquote>
         </section>
@@ -419,8 +419,9 @@
         </p>
         <blockquote class="informative">
             <p>
-                Non-normative note: The purpose of the logs directory is to provide implementers with a location for storing local
-                information about actions to the OCFL Object's content that is not part of the content itself.
+                Non-normative note: The purpose of the logs directory is to provide implementers with a location for
+                storing local information about actions to the OCFL Object's content that is not part of the content
+                itself.
             </p>
             <p>
                 As an example, implementers may have different local requirements to store audit information for their
