--- a/index.html
+++ b/index.html
@@ -438,6 +438,11 @@
 
     <section id="root-conformance-declaration">
         <h2>Root Conformance Declaration</h2>
+            The OCFL version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be an
+            empty file in the base directory of the <a>OCFL Storage Root</a> giving the OCFL version in the filename.
+            The filename MUST be constructed with a leading zero-equals (<code>0=</code>) string, the string
+            <code>ocfl_</code>, followed by the OCFL specification version number. For example <code>0=ocfl_1.0</code>
+            for version 1.0 of this specification.
     </section>
 
     <section id="root-structure">
