Makes Travis happy

--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@
         <dt><dfn>Logical State</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Logs Directory</dfn>:</dt>
-        <dd>The Logs Directory appears in the top level of the OCFL Object.  The purpose of the Logs Directory is to provide implementers with a place for storing local information about actions performed on the content that may not necessarily be part of the content itself.</dd>
+        <dd>The Logs Directory appears in the top level of the OCFL Object.  The purpose of the
+          Logs Directory is to provide implementers with a place for storing local information
+          about actions performed on the content that may not necessarily be part of the content
+          itself.</dd>
         <dt><dfn>OCFL Object</dfn>:</dt>
         <dd></dd>
         <dt><dfn>OCFL Object Root</dfn>:<dt>
