Fixing conflict on OCFL Object terminology

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <blockquote class="informative">
             <p>
                 Non-normative note: Implementers MAY also store copies of their file digests in a system external to
-                their OCFL object stores at the point of ingest, to further safeguard against the possibility of
+                their OCFL Object stores at the point of ingest, to further safeguard against the possibility of
                 malicious manipulation of file contents and digests.
             </p>
         </blockquote>
