--- a/index.html
+++ b/index.html
@@ -174,7 +174,13 @@
         <dt><dfn>Digest</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Directories</dfn>:</dt>
-        <dd></dd>
+        <dd>Directories (also called "folders") allow for the organization of files
+          into tree-like hierarchies. Directories are used to organize <a tag="OCFL 
+          Object">OCFL Objects</a> into <a tag="Version">Versions</a>.  Alternatively
+          they may be used to organize the content of an OCFL Object itself. Empty
+          directories within a version directory are not permitted. However empty
+          directories may be maintained by creating a .keep file within that
+          directory.</dd>
         <dt><dfn>Existing File Path</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Existing State</dfn>:</dt>
