--- a/index.html
+++ b/index.html
@@ -173,10 +173,9 @@
         <dd></dd>
         <dt><dfn>Digest</dfn>:</dt>
         <dd></dd>
-        <dt><dfn>Directories</dfn>:</dt>
+        <dt><dfn id="dfn-directories">Directories</dfn>:</dt>
         <dd>Directories (also called "folders") allow for the organization of files
-          into tree-like hierarchies. Directories are used to organize <a tag="OCFL 
-          Object">OCFL Objects</a> into <a tag="Version">Versions</a>.  Alternatively
+          into tree-like hierarchies. Directories are used to organize <a href="#dfn-ocfl-object">OCFL Objects</a> into <a href="#dfn-version">Versions</a>.  Alternatively
           they may be used to organize the content of an OCFL Object itself. Empty
           directories within a version directory are not permitted. However empty
           directories may be maintained by creating a .keep file within that
@@ -195,12 +194,12 @@
         <dd></dd>
         <dt><dfn>Logical State</dfn>:</dt>
         <dd></dd>
-        <dt><dfn>Logs Directory</dfn>:</dt>
+        <dt><dfn id="dfn-logs-directory">Logs Directory</dfn>:</dt>
         <dd>The Logs Directory appears in the top level of the OCFL Object.  The purpose of the
           Logs Directory is to provide implementers with a place for storing local information
           about actions performed on the content that may not necessarily be part of the content
           itself.</dd>
-        <dt><dfn>OCFL Object</dfn>:</dt>
+        <dt><dfn id="dfn-ocfl-object">OCFL Object</dfn>:</dt>
         <dd></dd>
         <dt><dfn>OCFL Object Root</dfn>:<dt>
         <dd></dd>
@@ -210,7 +209,7 @@
         <dd></dd>
         <dt><dfn>Renaming</dfn>:</dt>
         <dd></dd>
-        <dt><dfn>Version</dfn>:<dt>
+        <dt><dfn id=#dfn-version>Version</dfn>:<dt>
         <dd></dd>
     </dl>
 </section>
