makes travis happy

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <dd></dd>
         <dt><dfn>Renaming</dfn>:</dt>
         <dd></dd>
-        <dt><dfn id=#dfn-version>Version</dfn>:<dt>
+        <dt><dfn id="dfn-version">Version</dfn>:<dt>
         <dd></dd>
     </dl>
 </section>
