--- a/index.html
+++ b/index.html
@@ -175,11 +175,12 @@
         <dd></dd>
         <dt><dfn id="dfn-directories">Directories</dfn>:</dt>
         <dd>Directories (also called "folders") allow for the organization of files
-          into tree-like hierarchies. Directories are used to organize <a href="#dfn-ocfl-object">OCFL Objects</a> into <a href="#dfn-version">Versions</a>.  Alternatively
-          they may be used to organize the content of an OCFL Object itself. Empty
-          directories within a version directory are not permitted. However empty
-          directories may be maintained by creating a .keep file within that
-          directory.</dd>
+          into tree-like hierarchies. Directories are used to organize <a
+          href="#dfn-ocfl-object">OCFL Objects</a> into <a
+          href="#dfn-version">Versions</a>.  Alternatively they may be used to organize
+          the content of an OCFL Object itself. Empty directories within a version
+          directory are not permitted. However empty directories may be maintained by
+          creating a .keep file within that directory.</dd>
         <dt><dfn>Existing File Path</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Existing State</dfn>:</dt>
