--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ TBD
         </p>
         <blockquote class="informative">
             Non-normative note: Storing an inventory for every version provides redundancy for this critical
-            information in a way to is compatible with storage strategies that have immutable version directories.
+            information in a way that is compatible with storage strategies that have immutable version directories.
         </blockquote>
     </section>
 
